--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-custom-scrollbars": "^4.0.9",
     "@types/react-scroll": "^1.8.3",
     "framer-motion": "^5.3.3",
+    "lodash": "^4.17.21",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-custom-scrollbars": "^4.2.1",
