--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.32.5",
     "react-scroll": "^1.8.4"
   },
   "volta": {
